Add dev connection string to appsettings.json.

--- a/Project.API/appsettings.json
+++ b/Project.API/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "connectionStrings": {
+    "projectDBConnectionString": "Server=(localdb)\\mssqllocaldb;Database=ProjectDB;Trusted_Connection=True;"
+  }
 }
