--- a/Project.API/Properties/launchSettings.json
+++ b/Project.API/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/questions",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
